# csgl3

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
render/: beam.cpp  beam.h  brush.cpp  brush.h  commandbuffer.cpp  commandbuffer.h  decal.cpp  decal.h  decalclip.h  dynamicbuffer.cpp  dynamicbuffer.h  effects.cpp  effects.h  entity.cpp  entity.h  gamma.cpp  gamma.h  hudgl3.cpp  hudgl3.h  immediate.cpp  immediate.h  internal.h  internal_goldsrc.cpp  lightmap.cpp  lightmap.h  lightstyle.cpp  lightstyle.h  linmath.cpp  linmath.h  loader.cpp  memory.cpp  memory.h  model_goldsrc.h  particle.cpp  particle.h  platform.h  platform_linux.cpp  platform_windows.cpp  pvs.cpp  pvs.h  (+30 more)
shaderc/: main.cpp
shaders/: brush.frag  brush.vert  brush_common.glsl  common.glsl  lightmapped.frag  lightmapped.vert  screenfade.frag  screenfade.vert  shader_common.h  shader_sources.inl  sky.frag  sky.vert  sprite.frag  sprite.vert  studio.frag  studio.vert  studio_common.glsl  unlit.frag  unlit.vert  water.frag  water.vert
